# tariff-classification-backend

./: .env  Code Example  EU_official texts.xlsx  README.md  UN Comtrade Commodity Classifications_Corpus.xlsx  docker-compose.yml  dockerfile  notes.md  pyproject.toml  test_conn.py
app/: main.py
app/dependencies/: auth.py
app/models/: __init__.py  items.py  users.py
app/routers/: item.py
app/routers/auth/: authPost.py  authRouter.py  utils.py
app/routers/description/: descriptionDelete.py  descriptionGet.py  descriptionPost.py  descriptionPut.py  descriptionRouter.py
app/routers/discriptions/: discriptionDelete.py  discriptionGet.py  discriptionPost.py  discriptionPut.py  discriptionRouter.py
app/routers/feedback/: feedbackDelete.py  feedbackGet.py  feedbackPost.py  feedbackRouter.py
app/routers/search/: searchDelete.py  searchGet.py  searchPost.py  searchPut.py  searchRouter.py
app/schemas/: __init__.py
app/session/: db.py  models_init.py
