[tool.poetry]
name = "tariff-classification-backend"
version = "0.1.0"
description = ""
authors = ["Usman Fawad <45047731+Usmanfawad@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
asyncpg = "^0.29.0"
uvicorn = "^0.30.6"
alembic = "^1.13.2"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.9.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
